--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
 	],
     "require": {
         "slim/slim": "^3.0",
-		"a3gz/chubby-assets": "dev-master",
-		"a3gz/sunra-dom-parser": "dev-master"
+		"a3gz/sunra-dom-parser": "v1.0.0"
     },
     "autoload": {
         "psr-4": {
