PSR-1 and PSR-2 compliance.
Because I value standards more than personal preferences.

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "a3gz/chubby",
     "type": "library",
     "description": "Chubby is a PHP framework built around Slim that propose one way to organize code.",
-    "keywords": ["chubby", "slim", "framework", "php"],
+    "keywords": ["php", "framework", "chubby", "slim"],
     "homepage": "https://github.com/a3gz/chubby",
     "license": "MIT",
 	"authors": [
