--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,13 @@
 {
     "name": "a3gz/chubby",
-    "type": "library",
-    "description": "Chubby is a PHP framework built around Slim that propose one way to organize code.",
-    "keywords": ["php", "framework", "chubby", "slim"],
-    "homepage": "https://github.com/a3gz/chubby",
-    "license": "MIT",
-	"authors": [
-		{
+    "type": "project",
+    "description": "An application template for Slim 3",
+    "keywords": ["php", "framework", "slim", "application template"],
+    "authors": [
+        {
             "name": "Alejandro Arbiza",
             "email": "alejandro@roetal.com",
             "homepage": "https://www.roetal.com"
-		}
-	],
-    "require": {
-        "slim/slim": "^3.0",
-        "a3gz/sunra-dom-parser": "v1.0.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "Chubby\\": "src"
         }
-    }
+    ]
 }
