Removed invalid dependency. Modified README.

--- a/src/composer.json
+++ b/src/composer.json
@@ -4,8 +4,7 @@
     "require": {
         "slim/slim": "3.0",
         "monolog/monolog": "^1.23",
-        "a3gz/chubby-view": "^1.0",
-        "a3gz/chubby-locale": "^1.0"
+        "a3gz/chubby-view": "dev-master"
     },
     "autoload": {
         "psr-4": {
