--- a/src/composer.json
+++ b/src/composer.json
@@ -11,5 +11,6 @@
         "psr-4": {
             "Templates\\": "./app/views/templates"
         }
-    }
+    },
+    "minimum-stability": "dev"
 }
