--- a/src/composer.json
+++ b/src/composer.json
@@ -4,7 +4,7 @@
     "require": {
         "slim/slim": "3.5",
         "monolog/monolog": "^1.23",
-        "a3gz/chubby-view": "dev-master",
+        "a3gz/chubby-view": "dev-master"
     },
     "autoload": {
         "psr-4": {
