--- a/Dockerfile.sample
+++ b/Dockerfile.sample
@@ -2,7 +2,6 @@ FROM php:7.1-apache
 
 # Make the environment variable's value available to all layers
 ENV APP_HOME /var/www/html
-
 RUN apt-get update && apt-get install -y \
       libicu-dev \
       libpq-dev \
@@ -10,8 +9,14 @@ RUN apt-get update && apt-get install -y \
       git \
       zlib1g-dev \
       unzip \
+      libc-client-dev libkrb5-dev \
+      libwebp-dev libjpeg62-turbo-dev libpng-dev libxpm-dev libfreetype6-dev \
     && rm -r /var/lib/apt/lists/* \
     && docker-php-ext-configure pdo_mysql --with-pdo-mysql=mysqlnd \
+    && docker-php-ext-configure imap --with-kerberos --with-imap-ssl \
+    && docker-php-ext-configure gd --with-gd --with-webp-dir --with-jpeg-dir \
+      --with-png-dir --with-zlib-dir --with-xpm-dir --with-freetype-dir \
+      --enable-gd-native-ttf \
     && docker-php-ext-install \
       intl \
       mbstring \
@@ -22,6 +27,9 @@ RUN apt-get update && apt-get install -y \
       pgsql \
       zip \
       opcache \
+      mysqli \
+      imap \
+      -j$(nproc) gd \
       bcmath
 
 RUN curl --silent --show-error https://getcomposer.org/installer | php -- --install-dir=/usr/bin/ --filename=composer
