--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,9 @@
+<IfModule mod_setenvif.c>
+	SetEnvIf Authorization .+ HTTP_AUTHORIZATION=$0
+</IfModule>
+
 RewriteEngine on
+
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule . index.php [L]
