--- a/src/composer.json
+++ b/src/composer.json
@@ -8,7 +8,17 @@
     },
     "autoload": {
         "psr-4": {
+            "Controllers\\": "./app/controllers",
             "Templates\\": "./app/views/templates"
         }
+    },
+    "require-dev": {
+        "php": "7.3",
+        "phpunit/phpunit": "^9"
+    },
+    "scripts": {
+        "test": "phpunit test/php",
+        "test-verbose": "phpunit --verbose test/php",
+        "debug-test": "phpunit --debug test/php"
     }
 }
