--- a/Dockerfile.sample
+++ b/Dockerfile.sample
@@ -1,7 +1,7 @@
-FROM php:7.1-apache
+FROM php:7.4-apache
 
-# Make the environment variable's value available to all layers
 ENV APP_HOME /var/www/html
+
 RUN apt-get update && apt-get install -y \
       libicu-dev \
       libpq-dev \
@@ -11,16 +11,17 @@ RUN apt-get update && apt-get install -y \
       unzip \
       libc-client-dev libkrb5-dev \
       libwebp-dev libjpeg62-turbo-dev libpng-dev libxpm-dev libfreetype6-dev \
+      libonig-dev \
+      libpng-dev \
+      libzip-dev \
     && rm -r /var/lib/apt/lists/* \
     && docker-php-ext-configure pdo_mysql --with-pdo-mysql=mysqlnd \
     && docker-php-ext-configure imap --with-kerberos --with-imap-ssl \
-    && docker-php-ext-configure gd --with-gd --with-webp-dir --with-jpeg-dir \
-      --with-png-dir --with-zlib-dir --with-xpm-dir --with-freetype-dir \
-      --enable-gd-native-ttf \
+    && docker-php-ext-configure gd --enable-gd --with-webp --with-jpeg \
+      --with-xpm --with-freetype \
     && docker-php-ext-install \
       intl \
       mbstring \
-      mcrypt \
       pcntl \
       pdo_mysql \
       pdo_pgsql \
@@ -30,7 +31,7 @@ RUN apt-get update && apt-get install -y \
       mysqli \
       imap \
       -j$(nproc) gd \
-      bcmath
+      bcmath 
 
 RUN curl --silent --show-error https://getcomposer.org/installer | php -- --install-dir=/usr/bin/ --filename=composer
 
@@ -43,6 +44,6 @@ RUN a2enmod rewrite
 
 COPY . $APP_HOME
 
-RUN composer install -d $APP_HOME/src --no-interaction
+RUN composer install -d $APP_HOME/src --no-interaction && composer clear-cache
 
 RUN chown -R www-data:www-data $APP_HOME
