--- a/src/composer.json
+++ b/src/composer.json
@@ -13,7 +13,7 @@
         }
     },
     "require-dev": {
-        "php": "7.4",
+        "php": "^7.4",
         "phpunit/phpunit": "^9"
     },
     "scripts": {
