--- a/src/composer.json
+++ b/src/composer.json
@@ -2,14 +2,17 @@
     "name": "a3gz/chubby",
     "description": "Chubby dependencies",
     "require": {
-        "slim/slim": "3.5",
+        "slim/slim": "4.3.0",
         "monolog/monolog": "^1.23",
-        "a3gz/chubby-view": "^2"
+        "a3gz/chubby-view": "^2",
+        "php-di/php-di": "6.0.11",
+        "slim/psr7": "^1.3"
     },
     "autoload": {
         "psr-4": {
             "Controllers\\": "./app/controllers",
-            "Templates\\": "./app/views/templates"
+            "Templates\\": "./app/views/templates",
+            "Fat\\": "./fat"
         }
     },
     "require-dev": {
