Refactor tree structure
 * Move `src/` to `private/`
 * Add `public/` and move public files inside.

	modified:   .gitignore
	modified:   Dockerfile.sample
	modified:   docker-compose.yml.sample
	renamed:    src/app/config/config.php -> private/app/config/config.php
	renamed:    src/app/config/logger.php -> private/app/config/logger.php
	renamed:    src/app/controllers/ConsoleController.php -> private/app/controllers/ConsoleController.php
	renamed:    src/app/controllers/HelloController.php -> private/app/controllers/HelloController.php
	renamed:    src/app/controllers/HomeController.php -> private/app/controllers/HomeController.php
	renamed:    src/app/routes/console/.ignore -> private/app/routes/console/.ignore
	renamed:    src/app/routes/console/hello.php -> private/app/routes/console/hello.php
	renamed:    src/app/routes/web/hello.php -> private/app/routes/web/hello.php
	renamed:    src/app/routes/web/home.php -> private/app/routes/web/home.php
	renamed:    src/app/views/templates/DefaultTemplate.php -> private/app/templates/DefaultTemplate.php
	renamed:    src/app/views/templates/default-template.php -> private/app/templates/default-template.php
	renamed:    src/app/views/components/404.php -> private/app/views/components/404.php
	renamed:    src/app/views/components/footer.php -> private/app/views/components/footer.php
	renamed:    src/app/views/components/header.php -> private/app/views/components/header.php
	renamed:    src/app/views/components/hello.php -> private/app/views/components/hello.php
	renamed:    src/composer.json -> private/composer.json
	renamed:    src/fat/App.php -> private/core/fat/App.php
	renamed:    src/fat/Factory/AppFactory.php -> private/core/fat/Factory/AppFactory.php
	renamed:    src/fat/Handlers/MethodNotAllowedExceptionHandler.php -> private/core/fat/Handlers/MethodNotAllowedExceptionHandler.php
	renamed:    src/fat/Handlers/NotFountExceptionHandler.php -> private/core/fat/Handlers/NotFountExceptionHandler.php
	renamed:    src/fat/

--- a/Dockerfile.sample
+++ b/Dockerfile.sample
@@ -3,39 +3,37 @@ FROM php:7.4-apache
 ENV APP_HOME /var/www/html
 
 RUN apt-get update && apt-get install -y \
-      libicu-dev \
-      libpq-dev \
-      libmcrypt-dev \
-      git \
-      zlib1g-dev \
-      unzip \
-      libc-client-dev libkrb5-dev \
-      libwebp-dev libjpeg62-turbo-dev libpng-dev libxpm-dev libfreetype6-dev \
-      libonig-dev \
-      libpng-dev \
-      libzip-dev \
-    && rm -r /var/lib/apt/lists/* \
-    && docker-php-ext-configure pdo_mysql --with-pdo-mysql=mysqlnd \
-    && docker-php-ext-configure imap --with-kerberos --with-imap-ssl \
-    && docker-php-ext-configure gd --enable-gd --with-webp --with-jpeg \
-      --with-xpm --with-freetype \
-    && docker-php-ext-install \
-      intl \
-      mbstring \
-      pcntl \
-      pdo_mysql \
-      pdo_pgsql \
-      pgsql \
-      zip \
-      opcache \
-      mysqli \
-      imap \
-      -j$(nproc) gd \
-      bcmath 
+  libicu-dev \
+  libpq-dev \
+  libmcrypt-dev \
+  git \
+  zlib1g-dev \
+  unzip \
+  libc-client-dev libkrb5-dev \
+  libwebp-dev libjpeg62-turbo-dev libpng-dev libxpm-dev libfreetype6-dev \
+  libonig-dev \
+  libpng-dev \
+  libzip-dev
+RUN rm -r /var/lib/apt/lists/* \
+  && docker-php-ext-configure pdo_mysql --with-pdo-mysql=mysqlnd \
+  && docker-php-ext-configure imap --with-kerberos --with-imap-ssl \
+  && docker-php-ext-configure gd --enable-gd --with-webp --with-jpeg --with-xpm --with-freetype
+RUN  docker-php-ext-install \
+  intl \
+  mbstring \
+  pcntl \
+  pdo_mysql \
+  pdo_pgsql \
+  pgsql \
+  zip \
+  opcache \
+  mysqli \
+  imap \
+  bcmath \
+  gd
 
 RUN curl --silent --show-error https://getcomposer.org/installer | php -- --install-dir=/usr/bin/ --filename=composer
 
-#change the web_root to $APP_HOME folder
 RUN usermod -u 1000 www-data && groupmod -g 1000 www-data
 
 RUN sed -i -e "s/html/html/g" /etc/apache2/sites-enabled/000-default.conf
@@ -43,7 +41,5 @@ RUN sed -i -e "s/html/html/g" /etc/apache2/sites-enabled/000-default.conf
 RUN a2enmod rewrite
 
 COPY . $APP_HOME
-
-RUN composer install -d $APP_HOME/src --no-interaction && composer clear-cache
 
 RUN chown -R www-data:www-data $APP_HOME
