--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /Dockerfile
 /docker-compose.yml
 /vendor
-/src/composer.lock
-/src/config.local
-/src/vendor
+/private/composer.lock
+/private/config.local
+/private/vendor
+
