--- a/private/composer.json
+++ b/private/composer.json
@@ -6,11 +6,13 @@
         "monolog/monolog": "^1.23",
         "a3gz/chubby-view": "^2",
         "php-di/php-di": "6.0.11",
-        "slim/psr7": "^1.3"
+        "slim/psr7": "^1.3",
+        "bainternet/php-hooks": "^1.0"
     },
     "autoload": {
         "psr-4": {
             "App\\": "./app",
+            "Plugins\\": "./app/plugins",
             "Templates\\": "./app/templates",
             "Core\\": "./core",
             "Fat\\": "./fat"
