Remove public/etc whole dir from version control

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 /Dockerfile
 /docker-compose.yml
 /vendor
-/private/etc/*
+/private/etc
 /private/vendor
 /private/composer.lock
 /private/config.local
